fixed the reward overflow bug I believe....safari issue with display flex

--- a/app/assets/stylesheets/pages/_rewards_partial.scss
+++ b/app/assets/stylesheets/pages/_rewards_partial.scss
@@ -86,7 +86,6 @@
   }
 
   background-color: $white;
-  display: flex;
   flex-direction: column;
   width: 100%;
   align-items: center;
@@ -113,6 +112,10 @@
     box-shadow: 1px 4px 4px 0px rgba(239, 239, 241, 1);
   }
 
+  .btn-redeem{
+    width: 100%;
+  }
+
   max-width: 30%;
   margin: 0px;
 }
@@ -128,11 +131,12 @@
 
   a {
     color: $midgrey;
-    padding-left: 15px;
+    padding: 5px 10px;
   }
 
   .btn-redeem {
     color: white !important;
+    text-align: center;
   }
 
   display: flex;
